<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin_huge"
    android:background="@color/foodDetailBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/favouriteIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/foodImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="1"
        app:sliderStartAutoCycle="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodName"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/foodNameTextColor"
        app:layout_constraintTop_toBottomOf="@id/foodImage"
        app:layout_constraintStart_toStartOf="@id/foodImage"
        app:layout_constraintEnd_toEndOf="@id/foodImage"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/foodSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodSubTitle"
        android:textColor="@color/subSubTitleTextColor"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/foodName"
        app:layout_constraintStart_toStartOf="@id/foodImage"
        app:layout_constraintEnd_toEndOf="@id/foodImage"
        android:layout_marginTop="@dimen/activity_vertical_margin_small" />

    <TextView
        android:id="@+id/deliveryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliveryInfo"
        android:textColor="@color/deliveryInfoTextColor"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/foodSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/deliveryDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliveryDetail"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/deliveryInfo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin_small" />

    <TextView
        android:id="@+id/returnPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnPolicy"
        android:textColor="@color/foodReturnPolicyTextColor"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/deliveryDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin_huge" />

    <TextView
        android:id="@+id/returnPolicyDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnPolicyDetail"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/returnPolicy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin_small" />

    <Button
        android:id="@+id/btnAddToCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/addToCardButtonBackground"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/returnPolicyDetail"
        app:layout_constraintStart_toStartOf="@id/foodImage"
        app:layout_constraintEnd_toEndOf="@id/foodImage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/addToCard" />

</androidx.constraintlayout.widget.ConstraintLayout>