<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_onboarding_background"
    tools:context=".ui.onboarding.screens.ThirdOnboardingFragment">

    <ImageView
        android:id="@+id/thirdAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/third_app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:background="@drawable/background_app_logo"
        android:src="@drawable/ic_app_logo" />

    <TextView
        android:id="@+id/thirdOnboardingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/thirdAppLogo"
        app:layout_constraintBottom_toTopOf="@+id/thirdOnboardingImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:text="@string/third_onboarding_description"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito" />

    <ImageView
        android:id="@+id/thirdOnboardingImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/third_onboarding_image"
        app:layout_constraintTop_toBottomOf="@id/thirdOnboardingDescription"
        app:layout_constraintBottom_toTopOf="@+id/thirdOnboardingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="50dp"
        android:src="@drawable/ic_hamburger" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/thirdOnboardingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/thirdOnboardingImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_button_get_started"
        android:layout_marginHorizontal="20dp"
        android:text="@string/get_started"
        android:textColor="@color/onboarding_button_text"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>